--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -82,7 +82,7 @@ The standard way for an optician to measure a patients visual acuity is to use c
 
 These numbers have been calculated from a set of standardized conditions~\cite{Bailey}. For example there must be adequate lighting in the room so the patient can read the letters, but more importantly the charts are meant to be placed a fixed distance from the patient. For most charts, this distance is six meters. 
 
-These conditions cannot always be met. Examination rooms are not always large enough to take measurements from six meters away for example. In those cases, the reference numbers on the sheet are no longer accurate and the optician has to compensate manually~\cite{PGSoderberg}. If the standardized conditions cannot be met it can lead to irregularities or faulty measurements in some tests.
+These conditions cannot always be met. Examination rooms are not always large enough to take measurements from six meters away for example. In those cases, the reference numbers on the sheet are no longer accurate and the optician has to compensate manually~\cite{PGSoderbergOral}. If the standardized conditions cannot be met it can lead to irregularities or faulty measurements in some tests.
 
 There are also several different variations on these eye charts. Different sets of optotypes, ranging from different subsets of Latin letters to more abstract symbols, have been developed for different types of patients, such as those who are analphabetic, or for small children. The layout of these charts also have variations, from the classic Snellen chart~(fig.~\ref{fig:snellen_chart1}) that was developed in the 19th century, to the more modern ETDRS (Early Treatment Diabetic Retinopathy Study) chart~(fig.~\ref{fig:etdrs_chart1}).
 
@@ -102,11 +102,11 @@ In a field so dependent on visual aids and equipment, it's easy to see that ther
 \end{figure} 
 
 \section{Purpose}
-Having efficient and accurate systems is important in a medical environment, especially in a medical environment that handles tests where inaccurate or false results in some cases can cause accidents. Therefore it is important to have a well-built system that mitigates these problems. With the help of professor Per Söderberg who is an expert in the field of ophthalmology we have created a system that will act as a prototype for further future work. 
+Having efficient and accurate systems is important in a medical environment, especially in a medical environment that handles tests where inaccurate or false results in some cases can cause accidents. Therefore it is important to have a well-built system that mitigates these problems. With the help of professor P.G. Söderberg who is an expert in the field of ophthalmology we have created a system that will act as a prototype for further future work. 
 
 Accuracy is not the only important aspect to think of when implementing a system. It is also important to think about expanding and improving on how the system can be used. To introduce new functionality that will make the life of the system's user a lot more simple and efficient is one of those important improvements. 
 
-These are a few of the aspects that we took into consideration as we built our system. A simple system that implements digital eye charts had already been built by professor Söderberg, though that system is not as sophisticated or expandable as needed. We based some of our system's content upon how the original system was built. Mostly this system used the layouts of the charts already created since those charts have been shown to work. 
+These are a few of the aspects that we took into consideration as we built our system. A simple system that implements digital eye charts had already been built by professor P.G. Söderberg, though that system is not as sophisticated or expandable as needed. We based some of our system's content upon how the original system was built. Mostly this system used the layouts of the charts already created since those charts have been shown to work. 
 
 Using the original system as a basis for our own we built a system that
 
@@ -277,15 +277,15 @@ Several media streaming devices exists that allow digital content to be received
 
 \chapter{ Visual Acuity Testing}
 \section{Visual Acuity}
-The measurement of a persons visual acuity has an important constraint that needs to be followed. This constraint is the fact that our eyes works best physiologically from greater distances. On the other hand, at shorter distances our eyes tend to make what we see look unfocused. To make up for this shift in focus a minimum testing distance has to be enforced to ensure that the shift in focus stays as small as possible. This distance has by scientific research been set to be six meters \cite{Acuity_Book}.
+The measurement of a persons visual acuity has an important constraint that needs to be followed. This constraint is the fact that our eyes works best physiologically from greater distances. On the other hand, at shorter distances our eyes tend to make what we see look unfocused. To make up for this shift in focus a minimum testing distance has to be enforced to ensure that the shift in focus stays as small as possible. This distance has by scientific research been set to be six meters. \cite{Acuity_Book}
 
 \subsection{Measurement distance}
-The specific distance of six meters is derived from how our eyes bend light. From that distance or greater the rays of light entering our eyes are nearly parallel to each other, parallel enough to make it unnoticeable. It is important that the rays of light that hit the eyes are parallel because then the light hits a more focused area in the back of the eyes. This happens because of the convex shape of the eye's lens. A convex shaped lens focuses parallel light onto the focal point. Since a convex lens focuses parallel light to a focal point a concave lens instead spreads light coming from a focal point to parallel rays. Combining these two type of lenses we can create a more focused light \cite{Optics_Book}. 
+The specific distance of six meters is derived from how our eyes bend light. From that distance or greater the rays of light entering our eyes are nearly parallel to each other, parallel enough to make it unnoticeable. It is important that the rays of light that hit the eyes are parallel because then the light hits a more focused area in the back of the eyes. This happens because of the convex shape of the eye's lens. A convex shaped lens focuses parallel light onto the focal point. Since a convex lens focuses parallel light to a focal point a concave lens instead spreads light coming from a focal point to parallel rays. Combining these two type of lenses we can create a more focused light. \cite{Optics_Book}
 
 \subsection{Defocus correction}
-To make up for the shift in focus a suitable lens is put in front of the eye at about the distance that you would wear glasses. The type of lens mostly depends on the shape of your eye, any eye disease you might have or the distance from the lens to the eye. An important property of the lenses is at what distance the focal point lays at. So, to create a more focused light, which is exactly what glasses do, we have to put a lens in front of the eye to create more parallel light. These lenses can either be plus or minus lenses, either spreading or contracting the light \cite{Optics_Book}.
+To make up for the shift in focus a suitable lens is put in front of the eye at about the distance that you would wear glasses. The type of lens mostly depends on the shape of your eye, any eye disease you might have or the distance from the lens to the eye. An important property of the lenses is at what distance the focal point lays at. So, to create a more focused light, which is exactly what glasses do, we have to put a lens in front of the eye to create more parallel light. These lenses can either be plus or minus lenses, either spreading or contracting the light. \cite{Optics_Book}
 
-In optician's terms a minus glass is a lens that focuses light coming further away (subtraction) and a plus glass is a lens that focuses light from nearer (addition). A real world example of this is glasses correcting ~near- and farsightedness \cite{Acuity_Book}.
+In optician's terms a minus glass is a lens that focuses light coming further away (subtraction) and a plus glass is a lens that focuses light from nearer (addition). A real world example of this is glasses correcting ~near- and farsightedness. \cite{Acuity_Book}
 
 \subsection{Angular magnification}
 % TODO: Explain using formulas how the angular magnification works
@@ -313,7 +313,7 @@ The magnification is a problem is visual acuity testing because if the optotypes
     \caption{Magnification due to addition for closer distance\label{magtable}}
 \end{figure}
 
-There is need to have a standard to follow on how much addition or subtraction needed for a specific distance. Figure \ref{magtable} shows what values to use when testing visual acuity at shorter distances than six meters. \cite{PGSoderberg}
+There is need to have a standard to follow on how much addition or subtraction needed for a specific distance. Figure \ref{magtable} shows what values to use when testing visual acuity at shorter distances than six meters. \cite{PGSoderbergOral}
 
 \section{Chart Design}
 The visual acuity charts used in this project are based on the ETDRS (fig. \ref{fig:etdrs_chart1}, page \pageref{fig:etdrs_chart1}) \cite{Ferris} and the Axanivis (fig. \ref{fig:axanivis}) \cite{PGSoderbergOral} charts developed by P.G. Söderberg at Uppsala University Hospital. 
@@ -448,7 +448,7 @@ Once an estimated visual acuity has been achieved from the one line chart, the u
 \begin{figure}[ht!  ]
 \centering
 \includegraphics[width=90mm]{images/etdrs_single.png}
-\caption{The single optotype chart where the red circle indicates the area the patient should focus on.}
+\caption{The single optotype chart where the red circle indicates the area the patient should focus on. Note that this is the view on the Optician's screen, and that the screen displayed to the patient contains only the ring and the optotype.}
 \label{fig:etdrs_single}
 \end{figure}
 
@@ -487,15 +487,15 @@ In order to control the application, \textit{listeners} were created to listen t
 
 The design of the application follows the Android design principles by using Androids built in navigation drawer (fig. \ref{fig:example_nav_drawer}) and the built in views i.e. buttons, radio buttons, lists etc. \cite{android_design}.
 
-\begin{figure}[ht!]
+\begin{figure}[htb!]
 \centering
-\begin{subfigure}{.5\textwidth}
+\begin{subfigure}{.45\textwidth}
   \centering
   %\includegraphics[width=.5\linewidth]{images/etdrs_top.png}
   \includegraphics[width=50mm]{images/no_nav_drawer.png}
   \caption{A closed navigation drawer which can be opened by clicking on the three lines on the top left of the screen or by swiping from the left edge of the screen to the right.}
-\end{subfigure}%
-\begin{subfigure}{.5\textwidth}
+\end{subfigure}\hfill
+\begin{subfigure}{.45\textwidth}
   \centering
   \includegraphics[width=50mm]{images/nav_drawer.png}
   \caption{An open navigation drawer which can be closed by pressing the back button or by swiping from the right to the left.}
@@ -736,7 +736,7 @@ The optotype sizes were calculated for and measured on a 15.6 inch computer scre
 								14	&	8 	& 	0.15	& 	3	&	0.15	&	0.15\\
 										\hline
 \end{tabular}
-\caption{Height of optotypes for a 15.6 and 37 inch screen, both with a 1920x1080 resolution with a distance setting of 200cm. The rightmost column displays the expected height of the optotypes in cm} \label{tab:optotype_test}
+\caption{Height of optotypes for a 15.6 and 37 inch screen, both with a 1920x1080 resolution with a distance setting of 200cm. The rightmost column displays the expected height of the optotypes in cm.} \label{tab:optotype_test}
 \end{table}
 
 
@@ -766,7 +766,7 @@ Attempt	&	failures	&	succeses	\\
 %\end{figure}
 
 \section{Known bugs and issues}
-Even though the system fulfills the requirements, it doesn't mean it's bug free. If the network is unstable or slow, the server can react several seconds later than the Android application. This can cause a user to repeat an action which will, in the end, result in the server acting on on both actions. In the case that the connection gets broken, all actions performed on the currently selected chart will be ignored by the server, even after reconnecting. In this case, the user can change to another chart size or version and then back again to resolve the issue.
+Even though the system fulfils the requirements, it doesn't mean it's bug free. If the network is unstable or slow, the server can react several seconds later than the Android application. This can cause a user to repeat an action which will, in the end, result in the server acting on on both actions. In the case that the connection gets broken, all actions performed on the currently selected chart will be ignored by the server, even after reconnecting. In this case, the user can change to another chart size or version and then back again to resolve the issue.
 
 \chapter{ Conclusion}
 
