--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -104,6 +104,8 @@ In a field so dependent on visual aids and equipment, it's easy to see that ther
 \section{Purpose}
 Having efficient and accurate systems is important in a medical environment, especially in a medical environment that handles tests where inaccurate or false results in some cases can cause accidents. Therefore it is important to have a well-built system that mitigates these problems. With the help of professor P.G. Söderberg who is an expert in the field of ophthalmology we have created a system that will act as a prototype for further future work. 
 
+Determining visual acuity is a very labour- and equipment-intensive process, and this workload is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in many cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used.
+
 Accuracy is not the only important aspect to think of when implementing a system. It is also important to think about expanding and improving on how the system can be used. To introduce new functionality that will make the life of the system's user a lot more simple and efficient is one of those important improvements. 
 
 These are a few of the aspects that we took into consideration as we built our system. A simple system that implements digital eye charts had already been built by professor P.G. Söderberg, though that system is not as sophisticated or expandable as needed. We based some of our system's content upon how the original system was built. Mostly this system used the layouts of the charts already created since those charts have been shown to work. 
@@ -117,12 +119,12 @@ Using the original system as a basis for our own we built a system that
 	\item Has functionality to tailor the testing process by, among other things, changing the sets of symbols displayed or removing clutter from the charts.
 \end{itemize}
 
-\section{Motivation}
-A few things can be found in the working environment of the optician. Determining visual acuity is a very labor- and equipment-intensive process. It is a lot of manual labor with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in many cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used. 
+%\section{Motivation}
+%A few things can be found in the working environment of the optician. Determining visual acuity is a very labour- and equipment-intensive process. It is a lot of manual labour with much time wasted when setting up and changing the equipment used. This work-load is also increasing drastically with time. More and more people are experiencing eye problems, at all ages and in many cultures. \cite{vision_loss} With more people needing to test their visual acuity, faster and more efficient methods needs to be used. 
 
-Another fact is that physical eye charts are not as accurate as they should be for accurate measurements. They are also big in size and static, static in this context because they are fixed and cannot be changed. Because the handling of printed charts is slow and not as accurate as needed there exists a need for improvement. 
+%Another fact is that physical eye charts are not as accurate as they should be for accurate measurements. They are also big in size and static, static in this context because they are fixed and cannot be changed. Because the handling of printed charts is slow and not as accurate as needed there exists a need for improvement. 
 
-A digital eye chart has increased functionality, accuracy and efficiency which are all important aspects to approve upon. A digitalization also gives the user a greater possibility for extending the usage of the system.
+%A digital eye chart has increased functionality, accuracy and efficiency which are all important aspects to approve upon. A digitalization also gives the user a greater possibility for extending the usage of the system.
 
 \section{Issues}
 There were several technical problems that we needed to solve. We needed to find a suitable computer system that will act as the server, its job being storing and presenting the desired images to the screen. Our choice was to use a Raspberry Pi, since it is a cheap and compact alternative to a full-size computer that is more than powerful enough for our purposes. Although since the Raspberry Pi's CPU is running on an ARM-architecture there are a few compatibility problems. For example, the newly redesigned Java graphics library JavaFX, which is eventually going to replace the older Swing library, is only partially supported on ARM. Not being able to use the latest features can create problems with future Java updates when some things get deprecated. If Java Swing would become deprecated in the future it should not be too difficult to transfer the code to a compatible Java FX version.
