Uppdatering av TODO

--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -298,9 +298,7 @@ In optician's terms a minus glass is a lens that focuses light coming further aw
 \caption{Angular magnification at short distances\label{angular}}
 \end{figure}
 
-Though using lenses is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. 
-
-The magnification is a problem is visual acuity testing because if the optotypes on the eye chart are enlarged then an error will show up in the results.
+Though using lenses is a way of corrected for testing at short distances, a few problems arise from this. Figure \ref{angular} shows the problem of angular magnification. The magnification is a problem in visual acuity testing because if the optotypes on the eye chart are enlarged then an error will show up in the results.
 
 \newpage
 \begin{figure}[h]
@@ -436,7 +434,7 @@ The Axanivis charts are an extension to the ETDRS chart that modifies the origin
 \label{fig:etdrs_upper_lower}
 \end{figure}
 
-The two new chart layouts used is constructed using the same principles, like height and spacing of optotypes, as the original ETDRS chart. But instead of having 14 rows of 5 optotypes each, the first new layout takes a single column of the ETDRS chart and rotates it 90 degrees (fig. \ref{fig:etdrs_one_line}) so it's all on one line. This makes it wider than it's high which suits a monitor better. This also allows the patient to read from left to right, which is the common way to read in Europe and America. This makes it easier and feel more natural to read for a patient used to read in English or any other European language \cite{PGSoderbergOral}. Since the patient only have to read one letter of each size, this layout gives a quicker but more inaccurate result. This is useful to get a quick estimate on the visual acuity of the patient.
+The two new chart layouts used is constructed using the same principles, like height and spacing of optotypes, as the original ETDRS chart. But instead of having 14 rows of 5 optotypes each, the first new layout takes a single column of the ETDRS chart and rotates it 90 degrees (fig. \ref{fig:etdrs_one_line}) so it's all on one line. This makes it wider than it's high which suits a monitor better. This also allows the patient to read from left to right, which is the common way to read in Europe and America. This makes it easier and feel and more natural to read for a patient used to read in English or any other European language \cite{PGSoderbergOral}. Since the patient only has to read one letter of each size, this layout gives a quicker but more inaccurate result. This is useful to get a quick estimate on the visual acuity of the patient.
 
 \begin{figure}[ht!]
 \centering
