--- a/Project/Report/TODO.txt
+++ b/Project/Report/TODO.txt
@@ -12,27 +12,27 @@
 
 5.1 Beskrivningen av det egna arbetet är tydlig och gör att arbetet kan upprepas av andra.
 
-5.2 Val och beslut som är relevanta för genomförandet är tydligt beskrivna och motiverade. Alternativa lösningar diskuteras.
+5.2 Val och beslut som är relevanta för genomförandet är tydligt beskrivna och motiverade. Alternativa lösningar diskuteras. 
 
 6.1 Det finns en tydlig återkoppling till presenterad frågeställning.
 
-6.3 Resonemang är väl underbyggda.
+6.3 Resonemang är väl underbyggda. %%% Förbättrad? Bra? %%%
 
 6.4 Studenten visar på ett reflekterande förhållningssätt till det egna arbetet. Egna resultat analyseras kritiskt.
 
-8.1 Det är tydligt vad som är eget arbete och egna resultat respektive vad som är andras.
+8.1 Det är tydligt vad som är eget arbete och egna resultat respektive vad som är andras. %%% Förbättrat efter kommentarer %%%
 
-8.4 Språket är klart, korrekt, koncist och på lämplig vetenskaplig nivå.
+8.4 Språket är klart, korrekt, koncist och på lämplig vetenskaplig nivå. %%% Förbättrat efter kommentarer %%%
 
 
 
 %%%%%%FÄRDIG%%%%%%- Abstract på svenska saknas. 
 
-- Många beskrivningar måste bli mer speciifika (t.ex problemställningar, implementationen, protokollbeskrivningar). 
+%%% Tror jag har uppfyllts nu efter kommentarerna lösts %%% - Många beskrivningar måste bli mer speciifika (t.ex problemställningar, implementationen, protokollbeskrivningar). 
 
-- Begrepp måste introduceras (ofta med referenser) innan de används. 
+%%% Tror jag har uppfyllts nu efter kommentarerna lösts %%% - Begrepp måste introduceras (ofta med referenser) innan de används. 
 
-- Relaterat arbete måste utvidgas ordentligt. 
+%%%%%%%Färdig%%%%%%% - Relaterat arbete måste utvidgas ordentligt. 
 
 - Designalternativ behöver beskrivas/utredas. 
 
@@ -40,7 +40,7 @@
 
 Se till att AXANIVIS charts förklaras där det först nämns KLART!
 
-Se till att Söderbergs namn skrivs likadant överallt.
+Se till att Söderbergs namn skrivs likadant överallt. KLART!
 
 
 
