--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -41,7 +41,7 @@
 Digitalization of Visual Acuity Testing is a project about digitally displaying and manipulating optician's eye charts. The charts are displayed on a digital screen with a lightweight server running on a Raspberry Pi and controlled over a wireless network via an Android tablet. 
 %%This solves several problems related to the distance from the patient to the chart, while also providing more ways for the optician to tailor the examination to the patient.
 This allows the charts to adapt when placed at different distances from the patient, while also allowing the optometrist to tailor the examination to the patient by switching between multiple sheet designs and specialized sets of characters. 
-The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfils its goals and has performed well under testing, but more testing is needed to make sure it meets the demands of practising optometrists.
+The Digitalization of Visual Acuity Testing project has improved upon a proof-of-concept system that has been used at the Uppsala University Hospital to test whether or not digital screens are a viable alternative to physical charts. The project fulfils its goals and has performed well under testing, but more testing is needed to make sure it meets the demands of practising opticians.
 \end{abstract}
 \renewcommand{\abstractname}{Sammanfattning}
 \begin{abstract}
@@ -236,7 +236,7 @@ The second test is to make sure that the optotypes have the correct sizes on the
 
 The third test will determine how user friendly the system is. This will be done by letting a user with no previous knowledge of the system, attempt to connect to a server and perform some basic tasks like setting a specific chart with a specific optotype or setting a specific distance (App. \ref{app:usability}). If the user testing has no previous knowledge of visual acuity charts, a brief explanation will be given so that the test doesn't fail because the user, for example, doesn't know what "HVOT" is. Once the test is done, the user will provide feedback pointing out possible faults in our design. This feedback will then be used to improve the design. If the user can perform the entire test without help, the test is considered successful.
 
-The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate. Testing the system on anything other than a stable WiFi is unnecessary as it is only intended to work on a stable local network. If the end user's tablet cannot connect to their local WiFi reliably they might have problems, but it is not something we can affect.
+The last test is a quantitative test to see how well the server detection performs. The test involves the Android application trying to detect a server on a stable WiFi a 100 times and see how many times the server was detected. This test can be done several times and the average number of detection's in a 100 tries will determine its success rate. Testing the system on anything other than a stable WiFi is unnecessary as it is only intended to work on a stable local network. If the end user's tablet cannot connect to their local WiFi reliably they might have problems, but the source of those problems is outside our project, and we cannot affect it.
 
 \section{Related work}
 
@@ -255,7 +255,7 @@ Several different versions of visual acuity chart exist today. The ETDRS (Early 
 \subsection{Digital visual acuity charts}
 %Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus} are two applications supposed to display a visual acuity chart on a digital screen. Both applications are computer applications, which requires the computer to be connected to the screen. The companies behind the products provide very little information and the exact specifications of the charts are not available.
 
-There are several other commercial applications that display visual acuity charts on digital screens, for example Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus}. Most of these alternatives are computer applications which require the computer it runs on to be connected to the screen the chart will be displayed on. Both Digital Eye Chart and iCharPlus, like many other of the commercial applications, provide a remote control that can switch charts and other features. The difference between these systems and this project is in using a tablet computer as a remote, allowing a visual interface with touch controls that connects with the screen and server wirelessly instead of with a video cable. A visual interface allows more types of interactions than a remote control and also allows us to show values and information on the tablet held by the optimetrist instead of on the screen, removing clutter that might distract the patient.
+There are several other commercial applications that display visual acuity charts on digital screens, for example Digital Eye Chart \cite{digitaleyechart} and iChartPlus \cite{ichartplus}. Most of these alternatives are computer applications which require the computer it runs on to be connected to the screen the chart will be displayed on. Both Digital Eye Chart and iCharPlus, like many other of the commercial applications, provide a remote control that can switch charts and other features. The difference between these systems and this project is in using a tablet computer as a remote, allowing a visual interface with touch controls that connects with the screen and server wirelessly instead of with a video cable. A visual interface allows more types of interactions than a remote control and also allows us to show values and information on the tablet held by the optician instead of on the screen, removing clutter that might distract the patient.
 
 \subsection{Media streaming devices}
 Several media streaming devices exists that allow digital content to be received and displayed on a connected screen. Examples of such devices are Chromecast \cite{chromecast} and Apple TV \cite{appletv} which you can plug into a TV and allows you to view images or watch movies that are stored on your phone or computer. Both applications also allows developers to develop their own applications to display custom content but requires the developer to enter an agreement with respective company. Both these services allow you to mirror the screen of your tablet or phone to the TV screen, and could be used to display an eye chart. However, unless the screen on your tablet and the screen on your TV have the same resolution the image will be stretched or resized, reducing the quality of the image. If the screen is mirrored there is also a lot of network traffic needed to stream the screen over to the Chromecast or Apple TV, putting a strain on the tablet's battery life. The server in our project's solution displays the charts which are stored  on the server, minimizing the need for network traffic while working at the screens resolution without stretching or resizing.
@@ -449,14 +449,14 @@ Once an estimated visual acuity has been achieved from the one line chart, the u
 \begin{figure}[ht!  ]
 \centering
 \includegraphics[width=90mm]{images/etdrs_single.png}
-\caption{The single optotype chart where the red circle indicates the area the patient should focus on. Note that this is the view on the Optician's screen, and that the screen displayed to the patient contains only the ring and the optotype.}
+\caption[Single optotype chart]{The single optotype chart where the red circle indicates the area the patient should focus on. Note that this is the view on the optician's screen, and that the screen displayed to the patient contains only the ring and the optotype.}
 \label{fig:etdrs_single}
 \end{figure}
 
 \chapter{ Implementation}
 \section{Methods}
 \subsection{System structure}
-The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic, such as calculating the sizes of the optotypes and randomizing the order which they appear, and the view is the GUI (Graphical User Interface). The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. The reason the network part is separated from the controller is because it is large part of the system and it separates the project into three parts. This allows each project member to focus on a single part. Figure \ref{system_structure} shows how the different parts are connected.
+The system is divided into three major parts, an Android application, a server and networking. The Android application and server is modeled after the MVC (Model-View-Controller) pattern, where the model is the logic, such as calculating the sizes of the optotypes and randomizing the order which they appear, and the view is the GUI (Graphical User Interface). The controller part is the part on the Android application that listens for button clicks and gestures. Usually the networking would fall under controller in the MVC pattern but was, in this system, chosen to be a separate larger structure. The reason the network part is separated from the controller is because it is large part of the system and it separates the project into three parts. The network part is also almost identical on both the serverside and the tabletside, so the code could easily be adapted for both. Figure \ref{system_structure} shows how the different parts are connected.
 
 \begin{figure}[ht!]
 \centering
@@ -775,7 +775,7 @@ Even though the system fulfils the requirements, it doesn't mean it's bug free. 
 Even though the system turned out as intended, there are things left to do before it can be used clinically. First of all, the system must be tested for more bugs and unintended behavior. This should preferably be done by users other than the developers since the developers know how the system works and can't safely predict what another user will attempt to do. The system must be tested by experts in the field of ophthalmology in order to make sure that the built system actually is a valid solution. This will give the system credibility and make it possible to use it clinically.
 
 \section{Advantages of a digital system}
-The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This will save both time and space as only one screen, a small server and a small Android device is necessary, while also providing easier access to specialized charts that will help patients with different needs. This system will also allow the visual acuity tests to take place in rooms that previously where too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
+The advantages of a digital system is the ability to change the layout, optotypes and size of the chart without having to manually exchange charts. This will save both time and space as only one screen, a small server and a small Android device is necessary, while also providing easier access to specialized charts that will help patients with different needs. This system will also allow the visual acuity tests to take place in rooms that previously were too small, as the system will display optotypes at a size suitable for the distance the patient is from the monitor.
 
 \section{Disadvantages of a digital system}
 A disadvantage with this system is that digital screens become very expensive at large sizes, a 40 inch LED TV, for example, can cost above 3500 SEK as of 30/8-2015 according to Elgiganten. The screen size limits the maximum distance a patient can watch the screen and the patient should preferably sit at least 4 meters away from screen \cite{PGSoderbergOral}. Another disadvantage is that the resolution, or rather pixel density, will limit how close to a screen a patient can sit without the optotypes looking pixelated which will make it harder to read the optotype and result in an incorrect result from the test \cite{PGSoderbergOral}. Pixel density is a measurement of how many pixels (dots) can fit in a small section of the screen, usually denoted as Pixels Per Inch (PPI) or Dots Per Inch (DPI). The higher the DPI is the better the quality of small details will be and the optotype will appear less pixelated.
