--- a/Project/Report/report_draft.tex
+++ b/Project/Report/report_draft.tex
@@ -786,7 +786,7 @@ A possible alternative solution to a custom server running on a Raspberry Pi or 
 \section{Future Work}
 Future work will include more charts and features for the system. One such feature is the grating acuity test, which allows testing of visual acuity on very young children or people with difficulties communicating. The test consists of several vertical lines with different widths and distances from each other. These lines are moving horizontally on a screen and if the patient can distinguish the lines, the patients eyes will follow it. The eyesight can then be determined by looking on the thinnest line the patient can distinguish \cite{PGSoderbergOral}. Another feature is to include the option to, instead of changing the size of the optotypes, change the LogMAR values, so the top row doesn't necessarily start at 1.0 LogMAR. This way the server can calculate the largest size the top row optotypes can have and allow the chart to use the entire monitors screen no matter the distance from the patient to the screen.
 
-Other charts to be included could be, for example, charts using the Landholt C, charts for testing color blindness or charts used for testing astigmatism. The random function for the charts should be improved with constraints, as it currently has none. These constraints would make sure that the same optotype, or to similar optotypes like \textit{C} and \textit{O}, will not be repeated to many times in a row.
+Other charts to be included could be, for example, charts using the Landholt C, charts for testing color blindness or charts used for testing astigmatism. The random function for the charts should be improved with constraints, as it currently has none. These constraints would make sure that the same optotype, or to similar optotypes like \textit{C} and \textit{O}, will not be repeated too many times in a row.
 
 
 %\bibliography{references}{}
